--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
   --color-blue: #13a3fd;
   --color-black: #141414;
   --color-white: #fff;
-  --color-grey: #8d8d8d;
+  --color-grey: #a8a8a8;
   --color-green: #8fff00;
   --color-yellow: #ffc226;
   --color-orange: #ff6826;
