--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
   --color-blue: #13a3fd;
   --color-black: #141414;
   --color-white: #fff;
-  --color-grey: #8d8d8d;
+  --color-grey: #a8a8a8;
   --color-green: #8fff00;
   --color-yellow: #ffc226;
   --color-orange: #ff6826;
@@ -84,4 +84,30 @@ body {
 
 .position-fixed {
   position: fixed;
+}
+
+ul.list-container {
+  padding: 0;
+  padding-left: 0.625rem;
+  list-style-type: square;
+}
+
+li.list {
+  color: var(--color-grey);
+}
+
+li > .list-description {
+  color: var(--color-grey) !important;
+  font-size: 1.1rem !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
+
+  @media (--viewport-small) {
+    font-size: 0.875rem !important;
+  }
+}
+
+a {
+  color: var(--color-blue);
+  text-decoration: none;
 }
